--- a/myjeeappEar/pom.xml
+++ b/myjeeappEar/pom.xml
@@ -6,4 +6,61 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>myjeeappEar</artifactId>
+  
+  <packaging>ear</packaging>
+   <dependencies>
+   
+  <dependency>
+      <groupId>fr.afcepf.al32</groupId>
+      <artifactId>myjeeappEjb</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <type>ejb</type>       
+    </dependency>
+    
+    <dependency>
+      <groupId>fr.afcepf.al32</groupId>
+      <artifactId>myjeeappWeb</artifactId>
+      <version>0.0.1-SNAPSHOT</version> 
+      <type>war</type>     
+    </dependency>
+    
+  </dependencies>
+
+  <build>
+    <plugins>
+          
+      <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-ear-plugin</artifactId>
+				<version>3.0.1</version>
+				<configuration>
+					<generateApplicationXml>true</generateApplicationXml>
+					<includeJar>false</includeJar>
+					<defaultLibBundleDir>lib</defaultLibBundleDir>
+					<modules>
+						<webModule>
+							<groupId>fr.afcepf.al32</groupId>
+							<artifactId>myjeeappWeb</artifactId>
+							<contextRoot>myjeeappWeb</contextRoot>
+							<bundleFileName>myjeeappWeb.war</bundleFileName>
+						</webModule>
+						
+						<ejbModule>
+							<groupId>fr.afcepf.al32</groupId>
+							<artifactId>myjeeappEjb</artifactId>
+							<bundleFileName>myjeeappEjb.jar</bundleFileName>
+						</ejbModule>
+					</modules>	
+					<version>7</version>	<!-- 1.4 , 5 , 6 , 7-->			
+				</configuration>
+			</plugin>
+			
+		
+			
+      
+    </plugins>
+    <finalName>myjeeapp</finalName> <!-- .ear -->
+  </build>
+  
+  
 </project>
