--- a/myjeeappEjb/pom.xml
+++ b/myjeeappEjb/pom.xml
@@ -6,4 +6,44 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>myjeeappEjb</artifactId>
+  
+  <packaging>ejb</packaging>
+  
+  <dependencies>
+  
+  <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <!-- javaee-api = pack d'api jee : ejb + JPA + .... --> 
+            <version>7.0</version>
+            <scope>provided</scope> <!-- dejà fourni par jboss -->
+   </dependency>
+   
+   <dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-annotations</artifactId>
+    		<version>2.8.11</version>
+    		<scope>provided</scope>
+   </dependency>
+	
+  </dependencies>
+  
+   <build>
+    <plugins> 
+                  
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-ejb-plugin</artifactId> <!-- pour packaging ejb -->
+        <version>3.0.1</version>
+        <configuration>
+          <!-- 
+        <archive>
+            <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
+          </archive>
+         -->
+        <ejbVersion>3.2</ejbVersion>
+        </configuration>
+      </plugin>
+  </plugins>
+  </build>
 </project>
